# hw06-rylosqualo

./: index.ipynb  setup.cfg
_build/html/: .buildinfo  README.html  genindex.html  hw06-description.html  index.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: README.doctree  environment.pickle  hw06-description.doctree  index.doctree
_build/html/.doctrees/ligo/share/doc/gettext/examples/hello-pascal/: hello.doctree
_build/html/.doctrees/ligo/share/doc/nghttp2/: README.doctree
_build/html/ligo/share/doc/gettext/examples/hello-pascal/: hello.html
_build/html/ligo/share/doc/nghttp2/: README.html
_build/jupyter_execute/: index.ipynb  index.py
src/ligotools/: utils.py
src/ligotools.egg-info/: PKG-INFO  SOURCES.txt
src/ligotools/tests/: tests_readligo.py  tests_utils.py
