[metadata]
name = ligotools
description = fine-tuning reproducibility of LIGO Black Hole signal tutorial, pt. II
long_description = file: README.md
author = Ligo Scientific Collaboration (LSC) and Ryan Keivanfar
author_email = ryan.keivanfar@berkeley.edu
url = https://github.com/UCB-stat-159-s22/hw06-rylosqualo
license = MIT License
